# AudioEngine

./: .gitignore  AudioEngineConfig.cmake.in  CMakeLists.txt  README.md
examples/: CMakeLists.txt  audio_effects.cpp  basic_sample.cpp  loop_audio.cpp
include/: AudioBuffer.h  AudioEngine.h  AudioEngine.hpp  AudioPlayer.h  AudioPlayer.hpp  AudioStream.h  AudioStream.hpp  tools.h  tools.hpp
include/AudioEngine/: AudioBuffer.hpp  AudioEffects.hpp  AudioEngine.hpp  AudioPlayer.hpp  AudioStream.hpp  tools.hpp
libs/openal-soft/: config.h  config_backends.h  openal-info  openal.pc  version.h
src/: AudioBuffer.cpp  AudioEffects.cpp  AudioPlayer.cpp  AudioPresets.cpp  AudioStream.cpp  AudioStreamApplicators.cpp  tools.cpp
